--- a/Configuration.properties
+++ b/Configuration.properties
@@ -1,9 +1,5 @@
 browser=chrome
 
-hepsiburadaUrl=https://www.hepsiburada.com/
+hepsiburadaUrl=https://www.e-bebek.com/
 
-userMail=asen4270@gmail.com
-userPassword=247361mr
-
-productToSearch1=ruj
-productToSearch2=ruj
+productToSearch1=ka??k mamas?
