--- a/Configuration.properties
+++ b/Configuration.properties
@@ -1,5 +1,5 @@
 browser=chrome
 
-hepsiburadaUrl=https://www.e-bebek.com/
+E-BebekUrl=https://www.e-bebek.com/
 
-productToSearch1=ka??k mamas?
+productToSearch1=kasik mamasi
