--- a/Configuration.properties
+++ b/Configuration.properties
@@ -1,5 +1,4 @@
+ikeaUrl=https://www.ikea.com.tr/
+productToSearch=Yilbasi Agaci
+
 browser=chrome
-
-E-BebekUrl=https://www.e-bebek.com/
-
-productToSearch1=kasik mamasi
